# orbit

./: .gitignore  CLAUDE.md  README.md  innitial.md  orbit-architecture.md  orbit-context.md  orbit.db  pyproject.toml  terminal_output.md  tmp-release-notes.md
.cursor/: hooks.json  mcp.json
OrbitAccessApp/: ISSUE_REPORT.md  OrbitAccessApp.entitlements  Package.swift  project.yml
docs/: FRIEND_BETA_GUIDE.md  README.md  architecture-context-routing.md  capture-compatibility.md
loc-plans/: 00-prerequisites.md  01-smoke-tests.md  02-install-and-app-bundle.md  03-daemon-lifecycle.md  04-user-signup-and-scoping.md  05-chat-ai-routes.md  06-orbit-access-ui.md  07-capture-and-compatibility.md  08-beta-tester-e2e.md  README.md
mvp-output/: 2026-06-25-1341-test-output-task.md  2026-06-25-1345-send-cv-and-ai-project-link-to-anders-laustsen.md  2026-06-28-1051-finalize-fridson-deployment-for-1600-demo.md  2026-06-28-1104-apply-lovable-supabase-sync-manually.md
orbit/: __main__.py  cli.py  daemon_ctl.py  daemon_pid.py  runtime.py
orbit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orbit_dashboard/: CLAUDE.md  chieff_of_staff_v1.md  dashboard.html
plans/: 01-acceptance.md  01-content-collection.md  02-fix-orbit-start.md  03-universal-capture.md  04-calendar-schedule-placeholder.md  05-bottom-left-issue-notifications.md  06-sidebar-dropdown-menus.md  07-littlebird-chat-redesign.md  08-fix-chat-interactivity.md  09-offline-orbit-access.md  10-one-line-install.md  (+7 more)
services/orbit-relay/: .env.example  README.md  pyproject.toml  run-local.sh
services/orbit-relay/orbit_relay/: __init__.py  admin.py  auth.py  config.py  limits.py  main.py  openrouter.py  store.py
services/orbit-relay/tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_limits.py
(+199 files in other folders)
