[project]
name = "orbit"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "macapptree==0.0.2",
  "pyobjc-framework-Cocoa>=10.3.1",
  "Pillow",
  "sqlite-vec==0.1.9",
  "sentence-transformers>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
