[project]
name = "orbit"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "pyobjc-framework-Cocoa>=10.3.1",
  "pyobjc-framework-ApplicationServices>=10.3.1",
  "pyobjc-framework-FSEvents>=10.3.1",
  "pyobjc-framework-Quartz>=10.3.1",
  "pyobjc-framework-Vision>=10.3.1",
  "sqlite-vec==0.1.9",
  "sentence-transformers>=3.0",
  "openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit*"]

[project.scripts]
orbit = "orbit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
