[project]
name = "orbit-relay"
version = "0.1.0"
description = "Orbit Cloud AI relay — device registration and rate-limited OpenRouter proxy"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[project.scripts]
orbit-relay = "orbit_relay.main:run"
orbit-relay-admin = "orbit_relay.admin:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit_relay*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
